projects/backups/backup-config-files/stpi-router.virtual-labs.ac.in/vz/private/12236/etc/sysconfig/iptables
# Generated by iptables-save v1.4.7 on Mon Mar  3 13:38:35 2014
*nat
:PREROUTING ACCEPT [35:2964]
:POSTROUTING ACCEPT [37:2787]
:OUTPUT ACCEPT [0:0]

####################################################################
####This section has been verified by Saurabh on 4th Feb, 2015#####
###################################################################
#### Section Start

### Forwared port 22 to ssh-tunnel.virtual-labs.ac.in Public IP 196.12.53.133
-A PREROUTING -d 196.12.53.133/32 -p tcp -m tcp --dport 22 -j DNAT --to-destination 10.4.12.169 
-A POSTROUTING -s 10.4.12.169/32 -p tcp -m tcp --dport 22 -j SNAT --to-source 196.12.53.133


-A PREROUTING -d 196.12.53.133/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.4.12.169 
-A POSTROUTING -s 10.4.12.169/32 -p tcp -m tcp --dport 443 -j SNAT --to-source 196.12.53.133

## Forward port 53 to ns2-pub.virtual-labs.ac.in Public IP 196.12.53.130
-A PREROUTING -d 196.12.53.130/32 -p udp -m udp --dport 53 -j DNAT --to-destination 10.4.12.202 
-A PREROUTING -d 196.12.53.130/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 10.4.12.202 
#-A POSTROUTING -s 10.4.12.202/32 -p tcp -m tcp --sport 53 -j SNAT --to-source 196.12.53.130 
#-A POSTROUTING -s 10.4.12.202/32 -p udp -m udp --sport 53 -j SNAT --to-source 196.12.53.130 

## Forward port 53 to ns1-pub.virtual-labs.ac.in Public IP 196.12.53.134
-A PREROUTING -d 196.12.53.134/32 -p udp -m udp --dport 53 -j DNAT --to-destination 10.4.12.161 
-A PREROUTING -d 196.12.53.134/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 10.4.12.161 
-A POSTROUTING -s 10.4.12.161/32 -p tcp -m tcp --sport 53 -j SNAT --to-source 196.12.53.134
-A POSTROUTING -s 10.4.12.161/32 -p udp -m udp --sport 53 -j SNAT --to-source 196.12.53.134 

#### Section End

#Following rules to allow external ssh connections to connect to internal
#aws-backup.vlabs.ac.in server, added on 27 July 2015
#NAT, port forward tcp port 2222 to tcp port 22 on internal server
-A PREROUTING -d 196.12.53.133/32 -p tcp -m tcp --dport 2222 -j DNAT --to-destination 10.4.12.81:22

### proxy server
-A PREROUTING -d 196.12.53.135/32  -j DNAT --to-destination 10.4.12.156
-A POSTROUTING -s 10.4.12.156/32 -j SNAT --to-source 196.12.53.135

### Forward all ports to PASCAL Public IP 192.12.53.132
-A PREROUTING -d 196.12.53.132/32 -j DNAT --to-destination 10.4.12.165 
-A POSTROUTING -s 10.4.12.165/32 -j SNAT --to-source 196.12.53.132 


### Updated by Saurabh Barjatiya on 2nd July due to lack of documentation of 10.4.12.154
### NATTING 196.12.53.136 in both directions to 10.4.14.223 for Siddharth for testing
-A PREROUTING -d 196.12.53.136/32 -j DNAT --to-destination 10.4.14.223
-A POSTROUTING -s 10.4.14.223/32 -j SNAT --to-source 196.12.53.136

### Forward all ports to gateone.virtual-labs.ac.in Public IP 196.12.53.131
-A PREROUTING -d 196.12.53.131/32 -j DNAT --to-destination 10.4.12.201 
-A POSTROUTING -s 10.4.12.201/32 -j SNAT --to-source 196.12.53.131 


## Forward port 3389 to civil11.virtual-labs.ac.in windows remote desktop Public IP 196.12.53.130
-A PREROUTING -d 196.12.53.130/32 -p tcp -m tcp --dport 3389 -j DNAT --to-destination 10.4.12.175 
-A POSTROUTING -s 10.4.12.175/32 -p tcp -m tcp --dport 3389 -j SNAT --to-source 196.12.53.130 
#
#
#
### Port forwarding for jira.virtual-db-labs.ac.in on base3
-A PREROUTING -d 196.12.53.130/32 -p tcp -m tcp --dport 8080 -j DNAT --to-destination 10.4.13.251
-A POSTROUTING -d 10.4.13.251/32 -p tcp -m tcp --dport 8080 -j SNAT --to-source 196.12.53.130 
#
## Forward port 80,443 to http.virtual-labs.ac.in Public Ip 196.12.53.130
-A PREROUTING -d 196.12.53.130/32 -p tcp -m tcp --dport 80 -j DNAT --to-destination 10.4.12.159
-A PREROUTING -d 196.12.53.130/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.4.12.159
#-A POSTROUTING -s 10.4.12.159/32 -p tcp -m tcp --sport 80 -j SNAT --to-source 196.12.53.130
#-A POSTROUTING -s 10.4.12.159/32 -p tcp -m tcp --sport 443 -j SNAT --to-source 196.12.53.130
#
#
## Static NAT 192.12.53.137 to 10.4.12.225 - By Saurabh for temporary experiment
#
-A PREROUTING -d 196.12.53.137/32 -j DNAT --to-destination 10.4.12.225
-A POSTROUTING -s 10.4.12.225/32  -j SNAT --to-source 196.12.53.137 
#
#
## Forward port for router-new.virtual-labs.ac.in container on base1, CTID-14106 Public IP 196.12.53.140
-A POSTROUTING -s 10.4.14.106/32 -o eth0 -j SNAT --to-source 196.12.53.140
-A PREROUTING -d 196.12.53.140/32 -i eth0 -j DNAT --to-destination 10.4.14.106

# Added by Yogesh on March 24th for Murali's vm on base4
################
################
-A PREROUTING -d 196.12.53.138 -p tcp -m tcp --dport 22 -j DNAT --to-destination 10.4.12.224
-A POSTROUTING -s 10.4.12.224/32 -p tcp -m tcp --dport 22 -j SNAT --to-source 196.12.53.138

-A PREROUTING -d 196.12.53.138 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.4.12.224
-A POSTROUTING -s 10.4.12.224/32 -p tcp -m tcp --dport 443 -j SNAT --to-source 196.12.53.138

-A PREROUTING -d 196.12.53.138 -p tcp -m tcp --dport 80 -j DNAT --to-destination 10.4.12.224
-A POSTROUTING -s 10.4.12.224/32 -p tcp -m tcp --dport 80 -j SNAT --to-source 196.12.53.138

-A PREROUTING -d 196.12.53.138 -p tcp -m tcp --dport 8080 -j DNAT --to-destination 10.4.12.224
-A POSTROUTING -s 10.4.12.224/32 -p tcp -m tcp --dport 8080 -j SNAT --to-source 196.12.53.138

-A PREROUTING -d 196.12.53.138 -p tcp -m tcp --dport 8081 -j DNAT --to-destination 10.4.12.224
-A POSTROUTING -s 10.4.12.224/32 -p tcp -m tcp --dport 8081 -j SNAT --to-source 196.12.53.138

-A PREROUTING -d 196.12.53.138 -p tcp -m tcp --dport 8082 -j DNAT --to-destination 10.4.12.224
-A POSTROUTING -s 10.4.12.224/32 -p tcp -m tcp --dport 8082 -j SNAT --to-source 196.12.53.138

-A PREROUTING -d 196.12.53.138 -p tcp -m tcp --dport 8083 -j DNAT --to-destination 10.4.12.224
-A POSTROUTING -s 10.4.12.224/32 -p tcp -m tcp --dport 8083 -j SNAT --to-source 196.12.53.138

-A PREROUTING -d 196.12.53.138 -p tcp -m tcp --dport 8084 -j DNAT --to-destination 10.4.12.224
-A POSTROUTING -s 10.4.12.224/32 -p tcp -m tcp --dport 8084 -j SNAT --to-source 196.12.53.138

-A PREROUTING -d 196.12.53.138 -p tcp -m tcp --dport 8085 -j DNAT --to-destination 10.4.12.224
-A POSTROUTING -s 10.4.12.224/32 -p tcp -m tcp --dport 8085 -j SNAT --to-source 196.12.53.138

-A PREROUTING -d 196.12.53.138 -p tcp -m tcp --dport 8086 -j DNAT --to-destination 10.4.12.224
-A POSTROUTING -s 10.4.12.224/32 -p tcp -m tcp --dport 8086 -j SNAT --to-source 196.12.53.138

-A PREROUTING -d 196.12.53.138 -p tcp -m tcp --dport 8087 -j DNAT --to-destination 10.4.12.224
-A POSTROUTING -s 10.4.12.224/32 -p tcp -m tcp --dport 8087 -j SNAT --to-source 196.12.53.138

-A PREROUTING -d 196.12.53.138 -p tcp -m tcp --dport 8088 -j DNAT --to-destination 10.4.12.224
-A POSTROUTING -s 10.4.12.224/32 -p tcp -m tcp --dport 8088 -j SNAT --to-source 196.12.53.138

-A PREROUTING -d 196.12.53.138 -p tcp -m tcp --dport 3000 -j DNAT --to-destination 10.4.12.224
-A POSTROUTING -s 10.4.12.224/32 -p tcp -m tcp --dport 3000 -j SNAT --to-source 196.12.53.138

-A PREROUTING -d 196.12.53.138 -p tcp -m tcp --dport 25 -j DNAT --to-destination 10.4.12.224
-A POSTROUTING -s 10.4.12.224/32 -p tcp -m tcp --dport 25 -j SNAT --to-source 196.12.53.138
#################
#################


## Allow all outgoing requests with routers public IP
-A POSTROUTING -o eth0 -s 10.0.0.0/8 -j SNAT --to-source 196.12.53.130
COMMIT
# Completed on Mon Mar  3 13:38:35 2014
# Generated by iptables-save v1.4.7 on Mon Mar  3 13:38:35 2014
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -j ACCEPT 
-A FORWARD -j ACCEPT 
-A OUTPUT -j ACCEPT 
COMMIT
# Completed on Mon Mar  3 13:38:35 2014
